--- a/front-end/src/components/elements/slider/slider.css
+++ b/front-end/src/components/elements/slider/slider.css
@@ -15,8 +15,15 @@
 }
 
 @media screen and (max-width: 700px) {
+    .tweet{
+        display:flex;
+        justify-content: space-between;
+        flex-direction:column;
+        align-items: center;;
+    }
     .carousel .slide img{
         width:45vw !important;
         border-radius: 20px ;
+        margin:5px;
     }
 }
