--- a/front-end/src/components/pages/profile/Profile.css
+++ b/front-end/src/components/pages/profile/Profile.css
@@ -10,6 +10,8 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items:center;
+    text-align:center;
 }
 
 .first-container-profile {
@@ -32,6 +34,21 @@
     margin: 100px 0 20px 0;
 }
 
+.first-container-profile p {
+   font-size:1rem;
+   font-weight:500;
+}
+
+.first-container-profile span {
+    font-size:1rem;
+    font-weight:500;
+    color: var(--coral-color);
+ }
+
+ .profile-button{
+     margin:20px auto;
+ }
+
 .second-container-profile{
     display: flex;
     flex-direction: column;
@@ -45,6 +62,9 @@
 
 
 @media screen and (min-width: 800px) {
+    .profile-button{
+        padding:10px auto;
+    }
 
     .first-container-profile {
         width: 50vw;
@@ -66,11 +86,15 @@
     }
 
     .first-container-profile img {
-        margin: 150px 15px 0 15px;
+        margin: 125px 15px 20px 15px;
     }
 
     .second-container-profile {
         margin-top: 80px;
+    }
+
+    .container{
+        margin-top:80px;
     }
 
 }
