--- a/front-end/src/components/elements/searchbar/SearchBar.css
+++ b/front-end/src/components/elements/searchbar/SearchBar.css
@@ -4,5 +4,11 @@
     padding: 10px; 
     width: 200px;
     height: 5px;
-    color: var(--dark-blue-color)
+    font-family: 'Montserrat', sans-serif;
+    color: var(--dark-blue-color);
 }
+
+::placeholder { 
+    color: var(--dark-blue-color);
+    opacity: 1; 
+  }
