--- a/front-end/src/components/pages/startupflow/startupflow.css
+++ b/front-end/src/components/pages/startupflow/startupflow.css
@@ -7,39 +7,73 @@
 .startup-flow {
     display:flex;
     flex-direction:column;
-    justify-content: space-between;
+    justify-content: center;
     align-items:center;
-    background-color: var(--dark-blue-color);
-    color: var(--paper-color);
-    padding-top:15px;
+    background-image: url('../../../assets/background-img-home_skew.jpg');
     height: 100vh;
     width:100vw;
     text-align:center;
-    overflow:auto;
 }
 
 .search-container{
     display:flex;
     flex-direction:column;
-    margin-top:10px;
-    margin-right: auto;
-    margin-left: auto;
+    justify-content: center;
+    align-items: center;
     background-color: var(--paper-color);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
+    border: 0px solid;
+    border-radius: 20px;
     color:var(--dark-blue-color);
     width:80vw;
-    height:95vh;
-    overflow:auto;
+    height:80vh;
+}
+
+.search-container h1 {
+    padding: 0 20px;
+}
+
+.search-container span {
+    color: var(--coral-color);
+}
+
+.search-container h3 {
+    color: var(--light-blue-color);
+    margin-bottom: 10vh;
 }
 
 .search-title{
-    text-align:center;
-    margin-top:10px;
-    margin-bottom:5px;
+    margin-top: 10px;
+    margin-bottom: 5px;
 }
 
 .input-container {
-	margin: auto
+    overflow-x: scroll;
+    padding: 20px 0;
 }
+
+/* scroll bar */
+::-webkit-scrollbar {
+    width: 3px;
+  }
+  
+  ::-webkit-scrollbar-track {
+    background: transparent;
+  }
+
+  ::-webkit-scrollbar-corner {
+    background: transparent;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background: transparent;
+    border-radius: 20px;
+  }
+  
+  ::-webkit-scrollbar-thumb:hover {
+    background: var(--coral-color);
+  }
+
 
 .input-container form{
     display:flex;
@@ -47,6 +81,7 @@
     flex-flow: row wrap;
     text-align:center;
     width:70vw;
+    height: 60vh;
 }
 
 .search-result{
