--- a/front-end/src/components/pages/profile/Profile.css
+++ b/front-end/src/components/pages/profile/Profile.css
@@ -92,9 +92,9 @@
     .second-container-profile {
         margin-top: 80px;
     }
-
+/* 
     .container{
         margin-top:80px;
-    }
+    } */
 
 }
