--- a/front-end/src/components/pages/startupflow/startupflow.css
+++ b/front-end/src/components/pages/startupflow/startupflow.css
@@ -1,9 +1,3 @@
-
-
-.startup-greeting span{
-    color:var(--coral-color);
-}
-
 .startup-flow {
     display:flex;
     flex-direction:column;
@@ -20,13 +14,13 @@
     flex-direction:column;
     justify-content: center;
     align-items: center;
-    background-color: var(--paper-color);
+    background-color: white;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
     border: 0px solid;
     border-radius: 20px;
     color:var(--dark-blue-color);
-    width:80vw;
-    height:80vh;
+    width: 80vw;
+    height: 80vh;
 }
 
 .search-container h1 {
@@ -45,16 +39,19 @@
 .search-title{
     margin-top: 10px;
     margin-bottom: 5px;
+    color: var(--coral-color)
 }
 
 .input-container {
     overflow-x: scroll;
     padding: 20px 0;
+    margin: 20px 0;
 }
 
 /* scroll bar */
 ::-webkit-scrollbar {
     width: 3px;
+    background-color: transparent;
   }
   
   ::-webkit-scrollbar-track {
@@ -85,29 +82,52 @@
 }
 
 .search-result{
-    width:33%;
+    width: 250px;
     display:flex;
     flex-direction:column;
     align-items:center;
-    margin:5px auto;
+    justify-content: space-between;
+    margin: 5px auto 20px auto;
+    overflow: hidden;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
+    padding: 10px 0;
 }
 
-.search-result h3, h4{
-    margin: 2px auto;
+.book-title {
+    display: -webkit-box !important;
+    max-width: 200px;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: scroll;
+    margin: 0;
+    padding: 0; 
+}
+
+.search-result h3 {
+    display: block;
+    margin: 0px;
+    padding: 0px;
+}
+
+.search-result p {
+    margin: 0;
 }
 
 .search-result img{
-    width:8vw;
+    width: 8vw;
+    margin: 15px 0 10px 0;
 }
 
-.bookshelf-confirmation{
-    display: flex;
-    flex-direction:column;
-    justify-content: center;
-    align-items: center;
-    margin: 10px auto;
-    color:white;
+.step-buttons {
+    margin-bottom: 15px;
 }
+
+.bookshelf-conformation{
+    width: 100vw;
+    height: 100vh;
+    background-color: var(--dark-blue-color);
+}
+
 
 @media screen and (min-width: 800px) {
     
