--- a/front-end/src/components/pages/profile/Profile.css
+++ b/front-end/src/components/pages/profile/Profile.css
@@ -18,7 +18,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     width: 100vw;
     height: 100%;
     background-color: var(--paper-color);
@@ -35,18 +35,28 @@
 }
 
 .first-container-profile p {
-   font-size:1rem;
-   font-weight:500;
+    font-size:1rem;
+    font-weight:500;
 }
 
 .first-container-profile span {
     font-size:1rem;
     font-weight:500;
     color: var(--coral-color);
- }
+}
 
- .profile-button{
-     margin:20px auto;
+.first-container-profile table {
+    text-align: start;
+    margin: 0 20px;
+}
+
+.first-container-profile td{
+    padding-left: 25px;
+    padding-right: 25px;
+}
+
+.profile-button{
+     margin: 70px auto;
  }
 
 .second-container-profile{
@@ -76,10 +86,12 @@
 
     .second-container-profile {
         width: 50vw;
-        height: 98vh;
+        height: 100vh;
         align-items: center;
-        justify-content: flex-start
+        justify-content: center;
     }
+
+
 
     .main-container-profile {
         flex-direction: row;
@@ -89,12 +101,5 @@
         margin: 125px 15px 20px 15px;
     }
 
-    .second-container-profile {
-        margin-top: 80px;
-    }
-/* 
-    .container{
-        margin-top:80px;
-    } */
 
 }
