--- a/front-end/src/components/pages/startupflow/startupflow.css
+++ b/front-end/src/components/pages/startupflow/startupflow.css
@@ -56,6 +56,7 @@ progress[value]::-webkit-progress-value {
 
 .search-container span {
     color: var(--coral-color);
+    text-transform: capitalize;
 }
 
 .search-container h3 {
